--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AdSdkDemo</string>
     <string name="app_name_vivo">AdSdkVivo</string>
     <string name="app_name_oppo">AdSdkOppo</string>
+    <string name="continue_to_app">Continue to app</string>
 </resources>
