--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="continue_to_app">Continue to app</string>
     <string-array name="ad_sdk">
         <item>TradPlus</item>
+        <item>Topon</item>
         <item>Applovin</item>
         <item>Admob</item>
         <item>Mopub</item>
