--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
         <item>Applovin</item>
         <item>Admob</item>
         <item>Topon</item>
+        <item>Spread</item>
     </string-array>
     <string-array name="ad_layout">
         <item>Random</item>
