--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -29,4 +29,5 @@
     <string name="banner_size">배너 크기</string>
     <string name="change_language">언어</string>
     <string name="debug">디버그</string>
+    <string name="template">주형</string>
 </resources>
