--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -29,4 +29,5 @@
     <string name="banner_size">横幅大小</string>
     <string name="change_language">语言</string>
     <string name="debug">调试</string>
+    <string name="template">模板广告</string>
 </resources>
