1. 优化语言切换

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="change_language">Language</string>
     <string name="debug">Debug</string>
     <string name="template">Template</string>
+    <string name="format_string" translatable="false">%1$s RAM</string>
 
     <string-array name="ad_sdk" translatable="false">
         <item>TradPlus</item>
