1. 增加rect样式的native广告

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
         <item>Little</item>
         <item>Small</item>
         <item>Medium</item>
+        <item>Rect</item>
         <item>Large</item>
         <item>Wrap</item>
         <item>Full</item>
